// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar in date range mode should render date range view 1`] = `
<div id="m-calendar-uuid" class="m-calendar m-calendar-date-range">
    <div id="m-simple-calendar-uuid" class="m-base-calendar m-calendar__renderer">
        <nav class="m-base-calendar__header">
            <m-icon-button skin="link" icon-name="m-svg__chevron--left" class="m-base-calendar__previus">m-calendar:previous.month</m-icon-button>
            <button aria-live="polite" type="button" class="m-base-calendar__months">m-calendar:month.february 2019
            </button>
            <m-icon-button skin="link" icon-name="m-svg__chevron--right" class="m-base-calendar__next">m-calendar:next.month</m-icon-button>
        </nav>
        <div aria-live="polite" class="m-base-calendar__body">
            <table class="m-base-calendar__table">
                <thead>
                    <tr>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.sunday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.monday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.tuesday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.wednesday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.thursday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.friday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.saturday.short</td>
                    </tr>
                </thead>
                <tbody>
                    <tr>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">27</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">28</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">29</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">30</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">31</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">1</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">2</span></button>
                        </td>
                    </tr>
                    <tr>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">3</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">4</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">5</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">6</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">7</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">8</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">9</span></button>
                        </td>
                    </tr>
                    <tr>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">10</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">11</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">12</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">13</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">14</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">15</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">16</span></button>
                        </td>
                    </tr>
                    <tr>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">17</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">18</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">19</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">20</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-today"><span class="m-base-calendar__item__text">21</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">22</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">23</span></button>
                        </td>
                    </tr>
                    <tr>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">24</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">25</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">26</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">27</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">28</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">1</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">2</span></button>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
    </div>
</div>
`;

exports[`Calendar in single date mode should render single dates view 1`] = `
<div id="m-calendar-uuid" class="m-calendar m-calendar-single-date">
    <div id="m-simple-calendar-uuid" class="m-base-calendar m-calendar__renderer">
        <nav class="m-base-calendar__header">
            <m-icon-button skin="link" icon-name="m-svg__chevron--left" class="m-base-calendar__previus">m-calendar:previous.month</m-icon-button>
            <button aria-live="polite" type="button" class="m-base-calendar__months">m-calendar:month.february 2019
            </button>
            <m-icon-button skin="link" icon-name="m-svg__chevron--right" class="m-base-calendar__next">m-calendar:next.month</m-icon-button>
        </nav>
        <div aria-live="polite" class="m-base-calendar__body">
            <table class="m-base-calendar__table">
                <thead>
                    <tr>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.sunday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.monday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.tuesday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.wednesday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.thursday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.friday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.saturday.short</td>
                    </tr>
                </thead>
                <tbody>
                    <tr>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">27</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">28</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">29</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">30</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">31</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">1</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">2</span></button>
                        </td>
                    </tr>
                    <tr>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">3</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">4</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">5</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">6</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">7</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">8</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">9</span></button>
                        </td>
                    </tr>
                    <tr>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">10</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">11</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">12</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">13</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">14</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">15</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">16</span></button>
                        </td>
                    </tr>
                    <tr>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">17</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">18</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">19</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">20</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-today"><span class="m-base-calendar__item__text">21</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">22</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">23</span></button>
                        </td>
                    </tr>
                    <tr>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">24</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">25</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">26</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">27</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">28</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">1</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">2</span></button>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
    </div>
</div>
`;

exports[`Calendar with default values should render default view 1`] = `
<div id="m-calendar-uuid" class="m-calendar m-calendar-single-date">
    <div id="m-simple-calendar-uuid" class="m-base-calendar m-calendar__renderer">
        <nav class="m-base-calendar__header">
            <m-icon-button skin="link" icon-name="m-svg__chevron--left" class="m-base-calendar__previus">m-calendar:previous.month</m-icon-button>
            <button aria-live="polite" type="button" class="m-base-calendar__months">m-calendar:month.february 2019
            </button>
            <m-icon-button skin="link" icon-name="m-svg__chevron--right" class="m-base-calendar__next">m-calendar:next.month</m-icon-button>
        </nav>
        <div aria-live="polite" class="m-base-calendar__body">
            <table class="m-base-calendar__table">
                <thead>
                    <tr>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.sunday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.monday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.tuesday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.wednesday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.thursday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.friday.short</td>
                        <td class="m-base-calendar__weekday">m-calendar:weekday.saturday.short</td>
                    </tr>
                </thead>
                <tbody>
                    <tr>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">27</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">28</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">29</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">30</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">31</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">1</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">2</span></button>
                        </td>
                    </tr>
                    <tr>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">3</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">4</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">5</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">6</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">7</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">8</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">9</span></button>
                        </td>
                    </tr>
                    <tr>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">10</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">11</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">12</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">13</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">14</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">15</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">16</span></button>
                        </td>
                    </tr>
                    <tr>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">17</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">18</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">19</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">20</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-today"><span class="m-base-calendar__item__text">21</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">22</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">23</span></button>
                        </td>
                    </tr>
                    <tr>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">24</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">25</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">26</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">27</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item"><span class="m-base-calendar__item__text">28</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">1</span></button>
                        </td>
                        <td class="m-base-calendar__table-cell">
                            <button type="button" class="m-base-calendar__item m--is-other-month"><span class="m-base-calendar__item__text">2</span></button>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
    </div>
</div>
`;
